--- a/job/src/main/resources/application.properties
+++ b/job/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url = jdbc:mysql://localhost:3306/dashboard
+spring.datasource.username = root
+spring.datasource.password = password01
