--- a/job/src/main/resources/application.properties
+++ b/job/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/dashboard
+spring.datasource.url = jdbc:mysql://localhost:3306/jobboard
 spring.datasource.username = root
 spring.datasource.password = password01
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
